--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,70 @@
-[project]
-name = "machine"
-version = "0.1.0"
-description = "machine SDK"
-readme = "README.md"
-requires-python = ">=3.11"
-dependencies = ["asyncio>=3.4.3", "httpx>=0.28.1", "fastmcp>=2.10.6"]
+[build-system]
+requires = ["setuptools>=42.0", "wheel"]
+build-backend = "setuptools.build_meta"
 
-[dependency-groups]
-dev = ["dotenv>=0.9.9"]
+[project]
+name = "machine-sdk"
+version = "0.1.2"
+description = "SDK for interacting with Machine AI platform"
+readme = "README.md"
+authors = [
+    { name = "Your Name", email = "your.email@example.com" }
+]
+license = { text = "MIT" }
+requires-python = ">=3.11"
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Software Development :: Libraries :: Python Modules"
+]
+dependencies = [
+    "asyncio>=3.4.3",
+    "httpx>=0.28.1",
+    "fastmcp>=2.10.6",
+    "pydantic>=1.8.0",
+    "python-dotenv>=0.19.0",
+    "fastapi>=0.68.0",
+    "uvicorn>=0.15.0",
+    "pydantic-settings>=2.0.0",
+    "python-multipart>=0.0.5",
+    "sqlalchemy>=1.4.0",
+    "alembic>=1.7.0",
+    "asyncpg>=0.24.0",
+    "sqlmodel>=0.0.6",
+    "python-jose[cryptography]>=3.3.0",
+    "passlib[bcrypt]>=1.7.4"
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=6.2.5",
+    "pytest-asyncio>=0.15.1",
+    "black>=21.12b0",
+    "isort>=5.10.1",
+    "mypy>=0.910"
+]
+
+[project.urls]
+Homepage = "https://github.com/rossman22590/machine-sdk"
+Documentation = "https://github.com/rossman22590/machine-sdk#readme"
+Bug_Tracker = "https://github.com/rossman22590/machine-sdk/issues"
+
+[tool.setuptools]
+package-dir = {"" = "."}
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["machine*"]
+exclude = ["tests*"]
+
+[tool.black]
+line-length = 88
+target-version = ["py311"]
+include = "\\.pyi?$"
+
+[project.scripts]
+machine-cli = "machine.cli:main"
